--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
                 <LinearLayout
                     android:id="@+id/llo01"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="80dp"
                     android:background="@color/red"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
@@ -46,6 +46,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="25dp"
+                        android:visibility="gone"
                         android:layout_marginRight="20dp"
                         android:layout_marginTop="10dp"
                         android:text="Chào mừng Nguyen Van Nam"
@@ -61,6 +62,7 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
                         android:padding="5dp"
+                        android:visibility="gone"
                         android:text=""
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize12" />
@@ -74,7 +76,7 @@
                     android:layout_below="@id/llo01"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="-40dp"
+                    android:layout_marginTop="-60dp"
                     android:background="@drawable/st_bg_page_home"
                     android:orientation="vertical" >
 
@@ -107,6 +109,7 @@
                 <!-- QC1 -->
 
                 <RelativeLayout
+                    android:id="@+id/rloTinTuc"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:background="@drawable/st_bg_layout"
@@ -153,7 +156,8 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/st_bg_layout"
                     android:elevation="3dp"
-                    android:orientation="vertical" >
+                    android:orientation="vertical"
+                    android:visibility="gone" >
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -183,6 +187,23 @@
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/textsize12" />
                 </RelativeLayout>
+
+                <!-- Biểu đồ giá đơn vị -->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="vertical"
+                    android:background="@color/main_bgtrans70"
+                    android:padding="10dp" >
+
+                    <lecho.lib.hellocharts.view.LineChartView
+                        android:id="@+id/chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp" >
+                    </lecho.lib.hellocharts.view.LineChartView>
+                </LinearLayout>
             </LinearLayout>
 
             <!-- layout transaction -->
