--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start" xmlns:app1="http://schemas.android.com/apk/res/com.dlvn.mcustomerportal">
 
     <include
         layout="@layout/app_bar_main"
