--- a/res/layout/item_electricbill.xml
+++ b/res/layout/item_electricbill.xml
@@ -8,17 +8,33 @@
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin" >
 
-    <!-- Số hóa đơn -->
-
-    <TextView
-        android:id="@+id/tvSoHoaDon"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_weight="1"
-        android:text="Số hóa đơn: 00879643"
-        android:textSize="@dimen/textsize14"
-        android:textStyle="bold" />
+        android:orientation="horizontal" >
+
+        <!-- Số hóa đơn -->
+
+        <TextView
+            android:id="@+id/tvSoHoaDon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_weight="0.5"
+            android:text="Số hóa đơn: 00879643"
+            android:textSize="@dimen/textsize14"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvSoHopDong"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_weight="0.5"
+            android:text="Số hợp đồng: 00689643"
+            android:textSize="@dimen/textsize14"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <!-- Khách hàng -->
 
